2008-06-06  Evan Monroig  <evan.monroig@gmail.com>

	* tests.lisp: all tests now work for :FOREIGN-ARRAY and
	:LISP-ARRAY implementations

	* lapack-methods.lisp (gemm, gelsy): updated

	* lapack-utils.lisp (def-lapack-method): updated
	(with-pinned-objects, with-pinned-copies): arrange matrix copies
	to be pinned (for SBCL) or GC turned off (for CMUCL)
	(def-lapack-method): add methods for lisp-array based matrices,
	and for those replace WITH-COPIES by WITH-PINNED-COPIES
	(translate-to-foreign): define several methods to directly convert
	matrices to pointers
	(la-matrix->pointer): function to convert a lisp-array based
	matrix to a pointer for CMUCL and SBCL

	* matrix-foreign-array.lisp: use DEFINE-IMPLEMENTATION and
	DEF-LISP-MATRIX-TYPE

	* matrix-lisp-array.lisp: use DEFINE-IMPLEMENTATION and
	DEF-LISP-MATRIX-TYPE

	* matrix-implementations.lisp (define-implementation)
	(def-lisp-matrix-type): function and macro to do some bookkeeping
	on implementations and element-types

	* matrix-lisp-array.lisp (construct-la-matrix): use
	MAKE-CLASS-HIERARCHY

	* matrix-foreign-array.lisp (construct-fa-matrix): use
	MAKE-CLASS-HIERARCHY

	* matrix-implementations.lisp (matrix-class)
	(make-class-hierarchy): remove code duplication by factoring out
	common code in both implementations

	* matrix.lisp (flatten-matrix-indices): fixed strided-matview
	method
	(transpose-class, window-class, stride-class): new methods to
	determine which class to instanciate

	* matrix-lisp-array.lisp: add classes for views

	* matrix-foreign-array.lisp: add classes for views

	* lapack-utils.lisp (def-lapack-method): update to specialize on
	the base class of a matrix

2008-06-05  Evan Monroig  <evan.monroig@gmail.com>

	* lapack-methods.lisp: added as commented code a basic call to
	DGEMM using matrices based on lisp arrays

	* lapack-utils.lisp: added comments on how to proceed with CFFI
	and fortran types

	* lapack-methods.lisp: updated -- works only for foreign array